update tempalte.yaml error

--- a/template.yaml
+++ b/template.yaml
@@ -2547,6 +2547,25 @@ data:
             "port": 8080
         }
       ],
+      "require_tls": true,
+      "ssl_config": {
+          "cipher_filter": "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH",
+          "protocols": [
+            "SSLv3",
+            "SSLv2",
+            "TLSv1",
+            "TLSv1.1",
+            "TLSv1.2"
+          ],
+        "require_client_certs": true,
+        "trust_file": "/etc/proxy/tls/sidecar/ca.crt",
+        "cert_key_pairs": [
+          {
+            "certificate_path": "/etc/proxy/tls/sidecar/server.crt",
+            "key_path": "/etc/proxy/tls/sidecar/server.key"
+          }
+        ]
+      },
       "circuit_breakers": null,
       "outlier_detection": null,
       "health_checks": []
